[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Player/PlayerProjectile.gd" type="Script" id=1]
[ext_resource path="res://assets/projectile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 1 )

[node name="PlayerProjectile" type="Area2D"]
collision_layer = 0
collision_mask = 14
monitorable = false
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.19209e-07, 0 )
scale = Vector2( 0.7, 0.2 )

[connection signal="area_entered" from="." to="." method="_on_Projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
